<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Principale$PlaceholderFragment"
        android:textAlignment="center"
        android:id="@+id/VistaPrincipale">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/partiteVinteGiocatore"
            android:id="@+id/stringPartiteVinteGiocatore"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/labelPartiteVinteGiocatore"
            android:layout_alignBottom="@+id/stringPartiteVinteGiocatore"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="0"
            android:freezesText="true"
            android:textColor="@color/accent_dark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:shadowColor="#747a7a7a"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/partiteVinteComputer"
            android:id="@+id/stringPartiteVinteComputer"
            android:layout_below="@+id/stringPartiteVinteGiocatore"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/labelPartiteVinteComputer"
            android:layout_alignBottom="@+id/stringPartiteVinteComputer"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:freezesText="true"
            android:textColor="@color/accent_dark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:shadowColor="#747a7a7a"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/giocaLaTuaPartita"
            android:id="@+id/stringPunteggioPartita"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_below="@+id/stringPartiteVinteComputer"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/maniVinteGiocatore"
            android:id="@+id/stringManiVinteGiocatore"
            android:layout_below="@+id/labelMessaggioMano"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/labelManiVinteGiocatore"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/stringManiVinteGiocatore"
            android:freezesText="true"
            android:textColor="@color/accent_dark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:shadowColor="#747a7a7a"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/maniVinteDalComputer"
            android:id="@+id/stringManiVinteComputer"
            android:layout_below="@+id/stringPareggi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/labelManiVinteComputer"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/stringManiVinteComputer"
            android:freezesText="true"
            android:textColor="@color/accent_dark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:shadowColor="#747a7a7a"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pareggi"
            android:id="@+id/stringPareggi"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelManiVinteGiocatore"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/labelPareggi"
            android:layout_alignStart="@+id/labelManiVinteGiocatore"
            android:layout_alignLeft="@+id/labelManiVinteGiocatore"
            android:layout_alignBottom="@+id/stringPareggi"
            android:freezesText="true"
            android:textColor="@color/accent_dark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:shadowColor="#747a7a7a"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewGiocataGiocatore"
            android:layout_below="@+id/bottoneCarta"
            android:layout_marginTop="15dp"
            android:layout_alignLeft="@+id/stringPartiteVinteGiocatore"
            android:src="@drawable/carta1"
            android:contentDescription="@string/giocataGiocatore"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewGiocataComputer"
            android:src="@drawable/forbici2"
            android:contentDescription="@string/giocataComputer"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/benvenuto"
            android:id="@+id/labelMessaggioPartita"
            android:layout_below="@+id/stringPunteggioPartita"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:freezesText="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/usaIBottoniPerIniziare"
            android:id="@+id/labelMessaggioMano"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/labelMessaggioPartita"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:freezesText="true"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carta"
            android:id="@+id/bottoneCarta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/stringManiVinteComputer"
            android:layout_marginTop="15dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forbici"
            android:id="@+id/bottoneForbici"
            android:layout_alignBottom="@+id/bottoneCarta"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sasso"
            android:id="@+id/bottoneSasso"
            android:layout_alignBottom="@+id/bottoneForbici"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

</ScrollView>